--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "NPIN",
-  "description": "DISCUSS UNPIN BOT OPENSOURCE",
+  "name": "HB YOUTUBE DL BOT",
+  "description": "HB YOUTUBE DOWNLOADER BOT",
   "keywords": [
-    "YOUTUBE
+    "YOUTUBE"
     "TGBOT",
     "YTDL",
     "VIDEO"
