--- a/app.json
+++ b/app.json
@@ -29,17 +29,16 @@
       "value": ""
     }
   },
+    "API_HASH": {
+      "description": "YOUR API HASH, USE @TeleORG_Bot ",
+      "value": ""
+    }
+  },
   "addons": [
   ],
-  "buildpacks": [{
-    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-  }, {
-    "url": "heroku/python"
-  }],
-  "formation": {
-    "worker": {
-      "quantity": 1,
-      "size": "free"
-    }
-  }
+  "buildpacks": [
+        {
+            "url": "https://github.com/DX-MODS/heroku-buildpack-ffmpeg-latest.git"
+        }
+    ]
 }
