--- a/app.json
+++ b/app.json
@@ -34,6 +34,11 @@
       "value": ""
     }
   },
+  "API_HASH": {
+      "description": "YOUR API HASH, USE @TeleORG_Bot ",
+      "value": ""
+    }
+  },
   "addons": [
   ],
   "buildpacks": [
