--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
   ],
   "buildpacks": [
         {
-            "url": "https://github.com/DX-MODS/heroku-buildpack-ffmpeg-latest.git"
+            "url": "heroku/python"
         }
     ]
 }
